kubernetes/apps/apps/open-webui/open-webui/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: openwebui
  name: openwebui
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: openwebui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: open-webui
        app: openwebui
    spec:
      containers:
        - image: harbor.cloud.traunseenet.com/ghcr.io/open-webui/open-webui:v0.11.4@sha256:9591b13f13843c7721c2b8eaf7382846c81b3ffe126526d1888d1fed50c6a33f
          imagePullPolicy: IfNotPresent
          name: open-webui
          ports:
            - containerPort: 8080
              name: webui
              protocol: TCP
          volumeMounts:
            - mountPath: /app/backend/data
              name: data
      # dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: openwebui-data
