kubernetes/apps/apps/open-webui/open-webui/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  # annotations:
  #   netbird.io/expose: "true"
  #   netbird.io/groups: app-users
  #   netbird.io/policy: app-users
  #   netbird.io/resource-name: "gpt"
  labels:
    app: open-webui
  name: open-webui
spec:
  type: ClusterIP
  ports:
    - name: open-webui
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: openwebui
